[build-system]
requires = ["poetry"]

[tool.poetry]
name = "herokuadmintools"
version = "0.1.2"
description = "Wrapper for Heroku administration"
authors = ["Hal Wine <hwine@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pudb = "*"
pytest-pudb = "*"
